fixed wrong size of todolist

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ li {
 
 .toDo {
     width: 100%;
-    height: 10%;
+    height: 12%;
     display: flex;
     flex-direction: row;
 }
